--- a/latex/keccak-writeup.tex
+++ b/latex/keccak-writeup.tex
@@ -290,7 +290,17 @@ Now, we will discuss these types of attack in detail.
 In \cite{guo2016linear} Guo \etal describe there techniques for preimage attacks where they use linear structures to linearize variables upto 3 rounds. Linear structure is a Keccak state where we have a certain number of free linear variables, these free variables provide us with degree of freedom.
 So, more the number of free variables the better complexity of attack we can achieve provided the system of equations remains linear.
 
-In this type of attack, we set message variables in the rate part in such a way that the state remains a linear structure for the number of required rounds.
+In this type of attack, we set message variables in the rate part in such a way that the state remains a linear structure for the number of required rounds. Here, we go forwards with the message variables for (number of rounds - 1) + half round, considering the state is linear structure and rest of round we go backwards from the hash, and then build a system of linear equations and solve it to get the values of message variables. So, after a message is found from the hash we get the preimage successfully.
+
+\subsection{Preimage Attacks on 2-round Keccak}
+\begin{enumerate}
+	\item \subsection{Preimage Attacks on 2-round Keccak-512}
+				Describe here.
+	\item \subsection{Preimage Attacks on 2-round Keccak-384}
+				Describe here.
+	\item \subsection{Preimage Attacks on 2-round Keccak-256}
+				Describe here.
+\end{enumerate}
 
 \section{Preimage Attack for $2$ Rounds of Round Reduced \KECCAK-384}
 
